# metadetect-driver

./: .copier-answers.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  conda.yaml  environment.yml  pyproject.toml  requirements-conda.txt  requirements-dev.txt  requirements-pip.txt  requirements.txt  setup.cfg
.github/workflows/: build-documentation.yml  lint.yaml  lint.yml  pre-commit-ci.yml  smoke-test.yml  test.yaml  testing-and-coverage.yml
IMCOM_data/: README.txt
IMCOM_data/configs/: config_prod_H.json  config_prod_J.json
IMCOM_data/images/H158/logs/: out_0.txt  out_1.txt  out_2.txt  out_3.txt
IMCOM_data/images/J129/logs/: out_0.txt  out_1.txt  out_2.txt  out_3.txt
config/: README.txt  driver_default.yaml  driver_metacoadd.yaml  imcom_sci.yaml  metacoadd_default.yaml  metadetect_default.yaml
docs/: conf.py  index.rst
metadetect_driver/: BaseDriver.py  BaseRunner.py  IMCOMDriver.py  MetaDetectRunner.py  __init__.py  _base_driver.py  config.py  defaults.py  driver.py  imcom_dirver.py  imcom_driver.py
notebooks/: Example_flexible_shapes.ipynb  Examples_driver.ipynb
scripts/: linear_calibration_convergence.py  pixel_level_metacal.py  standalone_basis_expansion.py
src/metadetect_driver/: MetaDetectRunner.py  __init__.py  _base_driver.py  config.py  defaults.py  driver.py  imcom_dirver.py  main.py  util.py
src/metadetect_driver/scripts/: main.py  postprocess.py  report.py
tests/: test_IMCOMDriver.py  test_config.py  test_driver.py  write_output.py
tests/data/: output_01_00.fits  output_01_01.fits
tests/data/H158/: output_00_00.fits  output_00_01.fits
tests/data/J129/: output_00_00.fits  output_00_01.fits  output_01_00.fits  output_01_01.fits
tests/output/: metadetect_catalog_1m.parquet  metadetect_catalog_1p.parquet  metadetect_catalog_2m.parquet  metadetect_catalog_2p.parquet  metadetect_catalog_noshear.parquet
