[project]
name = "metadetect_driver"
version = "0.1"
description = "Driver package to run metadetecion"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Roman-HLIS-Cosmology-PIT" },
  { name = "Federico Berlfein", email = "fberlfei@andrew.cmu.edu" },
  { name = "Yuedong Fang", email = "yuedong.fang@duke.edu" },
  { name = "Axel Guinot", email = "axel.guinot.astro@gmail.com" },
  { name = "Arun Kannawadi", email = "kj.arun.kj@gmail.com" },
  { name = "Sidney Mau", email = "sidney.mau@duke.edu" },
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/Roman-HLIS-Cosmology-PIT/metadetect-driver"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
