[project]
name = "metadetect-driver"
license = {file = "LICENSE"}
readme = "README.md"
authors = [
  { name = "Roman-HLIS-Cosmology-PIT" },
  { name = "Federico Berlfein", email = "fberlfei@andrew.cmu.edu" },
  { name = "Yuedong Fang", email = "yuedong.fang@duke.edu" },
  { name = "Axel Guinot", email = "axel.guinot.astro@gmail.com" },
  { name = "Arun Kannawadi", email = "kj.arun.kj@gmail.com" },
  { name = "Sidney Mau", email = "sidney.mau@duke.edu" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
dynamic = ["version"]
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "pandas",
    "pytest",
    "pytest-cov",
    "ruff",
    "pre-commit",
]
docs = [
    "sphinx",
    "sphinx-autoapi",
    "sphinx-copybutton",
    "sphinx-rtd-theme",
]

[project.urls]
Homepage = "https://github.com/Roman-HLIS-Cosmology-PIT/metadetect-driver"
Repository = "https://github.com/Roman-HLIS-Cosmology-PIT/metadetect-driver.git"


[build-system]
requires = [
    "setuptools>=82.0.1",
    "setuptools_scm[simple]>=8",
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--doctest-modules --doctest-glob=*.rst"

[tool.ruff]
line-length = 110
target-version = "py312"
[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    "W",
    # Pyflakes
    "F",
    # pep8-naming
    # "N",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # docstrings
    "D101",
    "D102",
    "D103",
    "D106",
    "D206",
    "D207",
    "D208",
    "D300",
    "D417",
    "D419",
    # Numpy v2.0 compatibility
    "NPY201",
]
ignore = [
    "UP006", # Allow non standard library generics in type hints
    "UP007", # Allow Union in type hints
    "SIM114", # Allow if with same arms
    "B028", # Allow default warning level
    "SIM117", # Allow nested with
    "UP015", # Allow redundant open parameters
    "UP028", # Allow yield in for loop
    "F403", # Allow * imports
]

[project.scripts]
run-metadetect-on-images = "metadetect_driver.scripts.main:run_metadetect_on_images"
run-metadetect-on-block = "metadetect_driver.scripts.main:run_metadetect_on_block"
run-metadetect-on-mosaic = "metadetect_driver.scripts.main:run_metadetect_on_mosaic"
run-metadetect-report-on-block = "metadetect_driver.scripts.report:run_report_on_block"
run-metadetect-report-on-mosaic = "metadetect_driver.scripts.report:run_report_on_mosaic"
run-metadetect-postprocess = "metadetect_driver.scripts.postprocess:postprocess"
